<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A3F51B5"
    tools:context="com.ostap.prog4app.Login">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarLogin"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/titleLogin" />

    <View
        android:id="@+id/loginContainer"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="150dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarLogin" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/loginContainer"
        app:layout_constraintStart_toStartOf="@+id/loginContainer"
        app:layout_constraintTop_toTopOf="@+id/loginContainer" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/pwdHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/loginContainer"
        app:layout_constraintEnd_toEndOf="@+id/loginContainer"
        app:layout_constraintStart_toStartOf="@+id/loginContainer" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:background="#1E275C"
        android:text="@string/btnRegister"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signinBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginContainer" />

    <Button
        android:id="@+id/signinBtn"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="#1E275C"
        android:text="@string/common_signin_button_text"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/registerBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginContainer" />

    <TextView
        android:id="@+id/bt_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="32dp"
        android:text="Forgot your password? Click Here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginContainer" />

</android.support.constraint.ConstraintLayout>
